tests/src/frontend/expand/invalid/bad_global_class_children.sk
base class Foo {
  children =
  | .A()
}
